--- a/visiting_card_site/index.html
+++ b/visiting_card_site/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -28,9 +29,9 @@
 						<p>&nbsp;&bull;&nbsp; Responsible and fair &nbsp;&bull;&nbsp;</p>
 						<nav>
 							<ul>
-								<!--<li><a href="#" class="icon fa-twitter"><span class="label">Skype</span></a></li>-->
+								<li><a href="https://www.linkedin.com/in/nickolay-osiniy" class="fab fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://www.facebook.com/nickolay.osiniy" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<!--<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>-->
+								<li><a href="skype:nickolay.osiniy?chat" class="fab fa-skype"><span class="label">Skype</span></a></li>
 								<li><a href="http://github.com/spike23" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:nickolay.osiniy@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
@@ -39,6 +40,8 @@
 
 				<!-- Footer -->
 					<footer id="footer">
+							<p class="skype">skype: nickolay.osiniy</p>
+							<p class="mail">nickolay.osiniy@gmail.com</p>
 						<span class="copyright">&copy; 2018. Nickolay Osiniy</span>						
 					</footer>
 
