--- a/visiting_card_site/index.html
+++ b/visiting_card_site/index.html
@@ -29,7 +29,7 @@
 						<p>&nbsp;&bull;&nbsp; Responsible and fair &nbsp;&bull;&nbsp;</p>
 						<nav>
 							<ul>
-								<li><a href="https://www.linkedin.com/in/nickolay-osiniy" class="fab fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://linkedin.com/in/nickolay-osiniy-4509b1111" class="fab fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://www.facebook.com/nickolay.osiniy" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="skype:nickolay.osiniy?chat" class="fab fa-skype"><span class="label">Skype</span></a></li>
 								<li><a href="http://github.com/spike23" class="icon fa-github"><span class="label">Github</span></a></li>
