--- a/visiting_card_site/index.html
+++ b/visiting_card_site/index.html
@@ -15,6 +15,7 @@
 	</head>
 	<body class="is-preload">
 		<div id="wrapper">
+		   
 			<div id="bg"></div>
 			<div id="overlay"></div>
 			<div id="main">
@@ -40,9 +41,11 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-							<p class="skype">skype: nickolay.osiniy</p>
-							<p class="mail">nickolay.osiniy@gmail.com</p>
-						<span class="copyright">&copy; 2018. Nickolay Osiniy</span>						
+					<div class="wrapper">
+						<div class="ft skype"><p>skype: nickolay.osiniy</p></div>
+							<div class=" ft mail"><p>nickolay.osiniy@gmail.com</p></div>
+						<p class=" ft copyright">&copy; 2018. Nickolay Osiniy</p>
+					</div>					
 					</footer>
 
 			</div>
