--- a/rock monsters/index.html
+++ b/rock monsters/index.html
@@ -54,10 +54,11 @@
       <!-- Site Overlay -->
       <div class="site-overlay"></div>
 
-        <header id="home" class="parallax">
-          <div class="shadow">
+        <header id="home">
+          
             <div class="container-fluid">
                 <!-- change the image in style.css to the class header .container-fluid [approximately row 50] -->
+                <div class="shadow">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-3 col-xs-10">
@@ -74,8 +75,9 @@
 						<strong>Hard`n`Heavy</strong></h1>
                         <p>This is the simple site about the most popular and my favourites hard`n`heavy bands.</p>
                     </div>
+                    </div>
                 </div>
-            </div>
+            
         </div>
         </header>
         <section id="feat">
