--- a/visiting_card_site/index.html
+++ b/visiting_card_site/index.html
@@ -9,7 +9,8 @@
 		<title>Nickolay Osiniy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="Site describe my toolbox and soft-skills. There are my contacts">
+		<meta name="description" content="Site describe my toolbox and soft-skills. There are my contacts"/>
+		        <meta name="author" content="Nickolay Osiniy"/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
